--- a/guides/getting-started-workflows/setup-quickstart.mdx
+++ b/guides/getting-started-workflows/setup-quickstart.mdx
@@ -1,237 +1,215 @@
 ---
-title: "Setting Up GoogleTest: Quickstart"
-description: "Learn how to set up GoogleTest in your C++ project using CMake or Bazel, integrate it with your build system, and create your first running test. Walks through essential installation steps with practical examples for various environments."
+title: "Setup and Quickstart"
+description: "Learn how to set up GoogleTest and GoogleMock in your C++ project using common build systems (CMake, Bazel). This guide covers installation, basic configuration, and project integration, ensuring you can start writing tests without friction."
 ---
 
-# Setting Up GoogleTest: Quickstart
+# Setup and Quickstart
 
 ## Overview
 
-This guide helps you quickly set up GoogleTest in your C++ project using either CMake or Bazel as your build system. You will learn how to integrate GoogleTest and GoogleMock into your build workflow, add essential configurations, and create a simple, runnable test program. By following this guide, you will establish a working test environment confidently and efficiently.
+This guide walks you through setting up GoogleTest and GoogleMock in your C++ project using popular build systems like CMake and Bazel. By following these instructions, you will configure your environment to build, link, and run tests seamlessly, enabling you to start writing effective tests without friction.
 
 ---
 
 ## Prerequisites
 
-- A C++17-compliant compiler installed on your system.
-- Basic familiarity with either CMake or Bazel build systems.
-- Git installed if you're cloning the repository.
-- Internet connectivity to download GoogleTest sources if not already available.
+Before you begin, ensure you have:
+
+- A C++17 compatible compiler and toolchain.
+- CMake or Bazel installed (depending on your build system preference).
+- Basic familiarity with your project's build system.
+- The GoogleTest repository cloned or downloaded.
+
+If you need help with environment setup, see [Prerequisites & Supported Platforms](/getting_started/requirements_installation/prerequisites_supported_platforms).
 
 ---
 
 ## What You Will Achieve
 
-- Clone or download GoogleTest and GoogleMock sources.
-- Build GoogleTest libraries standalone or incorporate them into your project.
-- Use `gtest_main` or `gmock_main` libraries to simplify your test executable.
-- Integrate GoogleTest with CMake or Bazel build configurations.
-- Write and run your first test using the GoogleTest framework.
+By completing this guide, you will:
+
+- Integrate GoogleTest and GoogleMock into your build system.
+- Configure your project to find the necessary headers and libraries.
+- Set up the test executable entry point.
+- Compile and run your first test suite.
 
 ---
 
-# Step-by-Step Instructions
+## Estimated Time
+
+20-30 minutes for a typical setup, depending on your familiarity.
+
+---
+
+## Difficulty
+
+Beginner to Intermediate.
+
+---
+
+## Step-by-Step Setup Instructions
 
 ### 1. Cloning and Preparing GoogleTest
 
-Start by cloning the GoogleTest repository or downloading a stable release.
+1. Clone GoogleTest repository (which includes GoogleMock) with a stable release tag for stability:
 
 ```bash
-# Clone the repository
- git clone https://github.com/google/googletest.git
- cd googletest
+git clone https://github.com/google/googletest.git -b v1.17.0
 ```
 
-### 2. Build GoogleTest and GoogleMock (Standalone) Using CMake
+2. Navigate into the repository:
 
-1. Create a build directory inside the repository:
+```bash
+cd googletest
+```
 
-    ```bash
-    mkdir build && cd build
-    ```
+---
 
-2. Generate build scripts with default options (includes GoogleMock by default):
+### 2. Building with CMake (Standalone)
 
-    ```bash
-    cmake ..
-    ```
+If you want to build GoogleTest and GoogleMock as standalone:
 
-3. Build the libraries:
+1. Create a build directory:
 
-    ```bash
-    make
-    ```
+```bash
+mkdir build
+cd build
+```
 
-4. (Optional) Install libraries system-wide (requires administrator privileges):
+2. Generate build files with CMake:
 
-    ```bash
-    sudo make install
-    ```
+```bash
+cmake ..
+```
 
-> **Tip:** To build only GoogleTest without GoogleMock, run `cmake .. -DBUILD_GMOCK=OFF` instead.
+> **Tip:** To build only GoogleTest (without GoogleMock), add the option `-DBUILD_GMOCK=OFF`.
 
-### 3. Integrate GoogleTest into Your CMake Project
+3. Build the libraries and tests:
 
-If you have an existing CMake project, you can add GoogleTest as a dependency directly.
+```bash
+make
+```
 
-Add the following to your `CMakeLists.txt`:
+4. Optionally install GoogleTest to your system locations (typically `/usr/local`):
+
+```bash
+sudo make install
+```
+
+---
+
+### 3. Integrating Into Your CMake Project
+
+Instead of standalone build, most users integrate GoogleTest into their project’s build.
+
+1. Add GoogleTest as a subdirectory in your CMakeLists.txt:
 
 ```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/release-1.17.0.zip
-)
-
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE) # For Windows runtime matching
-FetchContent_MakeAvailable(googletest)
-
-add_executable(your_tests your_test_file.cpp)
-target_link_libraries(your_tests gtest_main)
-add_test(NAME your_tests COMMAND your_tests)
+add_subdirectory(path/to/googletest)
 ```
 
-- Replace `your_tests` and `your_test_file.cpp` with your executable and source file names.
-- This method downloads and builds GoogleTest automatically with your project.
-
-### 4. Use GoogleMock if Needed
-
-To enable GoogleMock features, link to `gmock_main` instead:
+2. Link your test executable target against GoogleTest and GoogleMock libraries:
 
 ```cmake
-target_link_libraries(your_tests gmock_main)
+target_link_libraries(your_test_target gtest gmock)
 ```
 
-This will include GoogleMock's main function and initialize GoogleMock along with GoogleTest.
+3. Make sure to enable C++17 in your project:
 
-### 5. Writing Your First Test
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
 
-Create a simple test file, `example_test.cpp`, with the following content:
+4. Use the provided main function by linking your test executable with `gtest_main` or `gmock_main`:
+
+```cmake
+target_link_libraries(your_test_target gtest_main gmock_main)
+```
+
+This eliminates the need to write your own `main()` function.
+
+---
+
+### 4. Building with Bazel
+
+To use GoogleTest with Bazel:
+
+1. Add GoogleTest as an external dependency in your `WORKSPACE` file.
+2. Define test targets using `cc_test` rule referencing GoogleTest and GoogleMock.
+
+Refer to Bazel-specific documentation for exact syntax and setup.
+
+---
+
+### 5. Writing a Minimal `main()` Function (If Not Using Provided Mains)
+
+If you choose not to link with provided main libraries, define your own entry point:
 
 ```cpp
-#include "gtest/gtest.h"
+#include <gtest/gtest.h>
 
-// Sample function to test
-int Factorial(int n) {
-  return n <= 1 ? 1 : n * Factorial(n - 1);
-}
-
-// Test suite: FactorialTest
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
-
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(2), 2);
-  EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(8), 40320);
+int main(int argc, char **argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
 }
 ```
 
-### 6. Build and Run Your Tests
+This initializes the framework and runs all tests.
 
-Build your test executable with CMake:
+---
+
+### 6. Validate Your Setup by Running Tests
+
+After building your test executable:
 
 ```bash
-mkdir -p build && cd build
-cmake ..
-make
-./your_tests  # Replace 'your_tests' with your executable name
+./your_test_executable
 ```
 
-You should see output similar to:
-
-```
-Running main() from gtest_main.cc
-[==========] Running 2 tests from 1 test suite.
-[----------] Global test environment set-up.
-[----------] 2 tests from FactorialTest
-[ RUN      ] FactorialTest.HandlesZeroInput
-[       OK ] FactorialTest.HandlesZeroInput
-[ RUN      ] FactorialTest.HandlesPositiveInput
-[       OK ] FactorialTest.HandlesPositiveInput
-[----------] 2 tests from FactorialTest (0 ms total)
-
-[----------] Global test environment tear-down
-[==========] 2 tests from 1 test suite ran. (0 ms total)
-[  PASSED  ] 2 tests.
-```
-
-### 7. Using Bazel to Set Up GoogleTest
-
-If using Bazel, add GoogleTest as a dependency in your `WORKSPACE` or `BUILD` file:
-
-```bazel
-# WORKSPACE
-http_archive(
-    name = "com_google_googletest",
-    url = "https://github.com/google/googletest/archive/release-1.17.0.zip",
-    strip_prefix = "googletest-release-1.17.0",
-)
-```
-
-```bazel
-# BUILD
-cc_test(
-    name = "example_test",
-    srcs = ["example_test.cpp"],
-    deps = ["@com_google_googletest//googletest:main"],
-)
-```
-
-Run your tests with:
-
-```bash
-bazel test //:example_test
-```
+You should see output indicating the tests ran, including summaries of passed or failed checks.
 
 ---
 
-# Best Practices & Tips
+## Best Practices
 
-- **Use `gtest_main` / `gmock_main` to avoid writing your own `main()`.** These auto-provide `main()` and initialize GoogleTest or GoogleMock properly.
-- **Isolate tests with test suites** to organize your tests logically.
-- **Leverage CMake FetchContent for easy integration** and keep dependencies up to date.
-- **Confirm C++17 compliance** since GoogleTest requires at least C++17.
-- **On Windows, set `gtest_force_shared_crt` to ON in CMake** to avoid runtime conflicts.
-
----
-
-# Troubleshooting Common Issues
-
-<AccordionGroup title="Troubleshooting GoogleTest Setup">
-<Accordion title="Build Errors Related to Linker or Compiler">
-- Ensure you are using a compiler that supports C++17.
-- For CMake, verify that CMake version is 3.14 or newer.
-- On Windows, verify that runtime library settings between GoogleTest and your project match. Use `-Dgtest_force_shared_crt=ON`.
-</Accordion>
-<Accordion title="Tests Not Running or Executable Missing main()">
-- Make sure you link with `gtest_main` or `gmock_main` unless you provide your own `main()`.
-- Verify that `testing::InitGoogleTest()` or `testing::InitGoogleMock()` is called before `RUN_ALL_TESTS()`.
-</Accordion>
-<Accordion title="GoogleMock Initialization Problems">
-- Initialize GoogleMock by calling `testing::InitGoogleMock()` which also initializes GoogleTest.
-- If using embedded or Arduino platforms, special entry points like `setup()` and `loop()` may be necessary.
-</Accordion>
-</AccordionGroup>
+- Always use the `InitGoogleTest` (or `InitGoogleMock` if using mocks) function before running any tests to initialize internal state and parse command line flags.
+- Link against `gtest_main` (and `gmock_main` for mocks) libraries to avoid manually writing the test `main()` unless you need custom behavior.
+- Keep your GoogleTest and GoogleMock versions consistent with your source repository or package versions.
+- Use C++17 or higher compiler standards for compatibility.
 
 ---
 
-# Next Steps
+## Troubleshooting Tips
 
-- Write more comprehensive tests exploring assertions and fixtures: [Writing Your First Test](../writing-first-test.md)
-- Learn how to interpret and run tests: [Running and Interpreting Test Results](../running-interpreting-tests.md)
-- Explore mock objects for isolating dependencies: [Isolating Dependencies with Google Mock](../../advanced-testing-patterns/using-gmock.md)
-- Configure continuous integration systems to automate testing: [Integrating with Continuous Integration Systems](../../integration-and-optimization/ci-integration-examples.md)
+- **Missing Headers or Link Errors:** Verify include paths and linked libraries are correctly set in your build system.
+- **Build Failures on Older Compilers:** Ensure your compiler supports C++17 features.
+- **Tests Not Running:** Confirm that the test executable is linked with the main libraries and `InitGoogleTest()` is called.
+- **Multiple `main()` Definitions Conflicts:** Avoid linking both `gtest_main` and defining your own `main()`.
 
----
-
-# References
-
-- Repository: [GoogleTest on GitHub](https://github.com/google/googletest)
-- Official docs link: [GoogleTest Quickstart](https://google.github.io/googletest/quickstart.html)
+For detailed troubleshooting, visit [Quick Validation & Troubleshooting](/getting_started/configuration_initial_success/quick_validation_troubleshooting).
 
 ---
 
-This quickstart guide simplifies your initial setup journey with GoogleTest, easing you into writing robust, maintainable C++ tests with minimal delay. Follow the steps carefully, and your C++ projects will gain a powerful unit testing foundation.
+## What’s Next?
+
+- After completing setup, proceed to [Writing Your First Tests](/guides/getting-started-workflows/writing-tests) to learn how to write effective test cases.
+- Explore [Creating and Using Mocks](/guides/getting-started-workflows/basic-mocking) to integrate mock objects in your tests.
+- Refer to the [Primer](/docs/primer.md) for foundational concepts and practical examples.
+
+---
+
+## Additional Resources
+
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
+- [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md)
+- [API Reference - Test Fixtures and Suites](https://github.com/google/googletest/blob/main/api_reference/core_testing_api/test_fixtures_and_suites.md)
+
+---
+
+## Summary
+
+GoogleTest and GoogleMock setup involves fetching the source code, building the libraries, and integrating them into your project's build system with CMake or Bazel. Linking your test executables against the provided main libraries simplifies running tests, ensuring you can quickly start writing and executing C++ tests efficiently. Following this guide guarantees your environment is ready for robust test development.
+
+
+---
