--- a/guides/getting-started-workflows/writing-tests.mdx
+++ b/guides/getting-started-workflows/writing-tests.mdx
@@ -1,272 +1,263 @@
 ---
-title: "Writing & Organizing Your First Tests"
-description: "Step-by-step instructions for authoring basic unit tests with GoogleTest, including test case structure, assertions, test fixtures, and test discovery. Also explains project layout and naming conventions for scalable growth."
+title: "Writing Your First Tests"
+description: "A hands-on walkthrough for writing and running your first unit tests with GoogleTest. Explains the basic test structure, assertions, and execution flow, empowering users to validate their code with confidence."
 ---
 
-# Writing & Organizing Your First Tests
+# Writing Your First Tests
 
-GoogleTest makes writing basic unit tests straightforward and scales gracefully as your project grows. This guide walks you through authoring your first tests using GoogleTest, focusing on test case structure, assertions, test fixtures, test discovery, and best practices for organizing tests and naming conventions.
+## Introduction
 
----
+Welcome to your hands-on guide to writing and running your first unit tests using GoogleTest. This guide empowers you to confidently validate your C++ code by understanding the essential building blocks of tests, assertions, and execution flow.
 
-## 1. Understanding the Workflow
-
-### What This Guide Covers
-- Writing simple, focused **unit tests** using GoogleTest's macros
-- Structuring tests with meaningful **test suites** and **test cases**
-- Making assertions to verify behavior
-- Using **test fixtures** for shared setup/teardown
-- Organizing your test project layout for maintainability and growth
-
-### Prerequisites
-- A working C++ environment with GoogleTest integrated
-- Basic familiarity with C++
-- Your codebase structured to allow unit testing (functions, classes, interfaces)
-
-### Expected Outcome
-You will create a test suite containing multiple tests that run independently and produce clear pass/fail results. You will understand how to use fixtures to reduce repetition, apply assertions effectively, and your project will be organized for scalable test growth.
-
-### Time Estimate
-About 30-60 minutes to gain hands-on confidence with writing and organizing your first tests.
-
-### Difficulty Level
-Beginner to Intermediate
+Whether you’re new to testing or coming from other testing environments, this walkthrough will help you grasp the fundamentals with practical examples.
 
 ---
 
-## 2. Step-by-Step Instructions
+## What This Guide Helps You Accomplish
 
-### Step 1: Create a Test Source File
-Create a new C++ file for your tests, for example, `foo_test.cc`.
+- Learn how to write simple test functions using GoogleTest macros
+- Understand how to group tests logically into test suites
+- Use assertions to check your code’s expected behavior
+- Run tests and interpret results from the console output
 
-### Step 2: Include Required Headers
+## Prerequisites
+
+- A C++ project configured to include and link against GoogleTest
+- Basic understanding of C++ syntax and compilation
+- (Optional) Familiarity with building your project using CMake or Bazel
+
+---
+
+## 1. Understanding Test Structure
+
+GoogleTest lets you write tests that are organized into **test suites** and **test cases**.
+
+- **Test Suite:** A named group of related tests, typically corresponding to a class or feature
+- **Test Case (Test):** An individual function that performs checks to validate code behavior
+
+### Writing a Simple Test
+
+The most basic unit test uses the `TEST()` macro:
+
 ```cpp
-#include <gtest/gtest.h>
-// Include the header of the code under test//#include "foo.h"
+TEST(TestSuiteName, TestName) {
+  // Test code and assertions go here
+}
 ```
 
-### Step 3: Write Simple Tests Using `TEST` Macro
-The `TEST` macro defines a test function within a named test suite.
+Here, `TestSuiteName` groups tests, and `TestName` uniquely identifies this test.
+
+### Example: Testing a Factorial Function
+
+Suppose you have this simple factorial function:
 
 ```cpp
-TEST(FooTest, ReturnsCorrectFactorial) {
+int Factorial(int n) {
+  if (n <= 1) return 1;
+  return n * Factorial(n - 1);
+}
+```
+
+Here’s how you test it:
+
+```cpp
+TEST(FactorialTest, HandlesZeroInput) {
   EXPECT_EQ(Factorial(0), 1);
+}
+
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
   EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(5), 120);
+  EXPECT_EQ(Factorial(8), 40320);
 }
 ```
 
-- The first argument `FooTest` groups related tests.
-- The second argument is the test name.
-- Assertions like `EXPECT_EQ` check expected outcomes.
+This defines two test cases within the `FactorialTest` suite.
 
-> **Tip:** Avoid underscores in suite/test names for consistency.
 
-### Step 4: Use Assertions to Check Outcomes
-GoogleTest provides rich assertion macros:
-- `EXPECT_EQ(val1, val2)`: Verifies equality; test continues on failure
-- `ASSERT_EQ(val1, val2)`: Same but aborts test on failure
-- `EXPECT_TRUE(condition)`, `EXPECT_FALSE(condition)` for boolean checks
-- `EXPECT_THROW(statement, exception_type)` for exception testing
+---
 
-Use these to confirm your code behaves as expected.
+## 2. Using Assertions to Verify Behavior
 
-### Step 5: Add Test Fixtures for Shared Setup
-If you have multiple tests that require the same objects/setup, define a fixture:
+Assertions check if specific conditions hold true, determining whether a test passes or fails.
+
+### Common Assertion Macros
+
+| Assertion           | Description                                   | Failure Behavior          |
+|---------------------|-----------------------------------------------|--------------------------|
+| `EXPECT_TRUE(cond)`  | Checks if `cond` is true                       | Nonfatal failure (test continues)
+| `ASSERT_TRUE(cond)`  | Checks if `cond` is true                       | Fatal failure (aborts test function)
+| `EXPECT_EQ(val1, val2)` | Checks if `val1 == val2`                    | Nonfatal failure
+| `ASSERT_EQ(val1, val2)` | Checks if `val1 == val2`                    | Fatal failure
+
+### Differences Between EXPECT and ASSERT
+
+- `EXPECT_` allows the test to continue after failure, allowing multiple issues to be reported
+- `ASSERT_` stops the current test immediately upon failure to avoid further undefined behavior
+
+### Example
 
 ```cpp
-class FooTest : public testing::Test {
+TEST(MathTest, SimpleAssertions) {
+  EXPECT_TRUE(1 + 1 == 2);
+  ASSERT_EQ(3 * 3, 9);
+  EXPECT_FALSE(5 < 3);
+}
+```
+
+
+---
+
+## 3. Organizing Multiple Tests Using Test Fixtures
+
+When your tests need shared setup or common data, use a **test fixture**.
+
+### Defining a Test Fixture
+
+Create a class derived from `testing::Test`. Use `protected` members for shared data and override `SetUp()` and `TearDown()` if needed.
+
+```cpp
+class QueueTest : public testing::Test {
  protected:
-  void SetUp() override {
-    // Common setup code
+  QueueTest() {
+    // Prepare shared test data
+    q1_.Enqueue(1);
+    q2_.Enqueue(2);
+    q2_.Enqueue(3);
   }
 
-  void TearDown() override {
-    // Cleanup code
-  }
-
-  Foo foo_;  // shared object
+  Queue<int> q0_;
+  Queue<int> q1_;
+  Queue<int> q2_;
 };
+```
 
-TEST_F(FooTest, DoesThis) {
-  EXPECT_TRUE(foo_.DoesThis());
+### Writing Tests With the Fixture
+
+Use `TEST_F()` macro with the fixture class name to define tests:
+
+```cpp
+TEST_F(QueueTest, IsEmptyInitially) {
+  EXPECT_EQ(q0_.size(), 0);
 }
 
-TEST_F(FooTest, HandlesEdgeCase) {
-  EXPECT_THROW(foo_.DoThat(-1), std::invalid_argument);
+TEST_F(QueueTest, DequeueWorks) {
+  int* elem = q1_.Dequeue();
+  ASSERT_NE(elem, nullptr);
+  EXPECT_EQ(*elem, 1);
+  delete elem;
 }
 ```
 
-- Use `TEST_F` to associate tests with the fixture.
-- Each test runs with a fresh fixture instance.
-
-### Step 6: Name Your Test Files and Classes Consistently
-- Source files: `foo_test.cc` for tests related to `foo.cc` or `foo.h`
-- Test suite class names end with `Test` (e.g., `FooTest`)
-- Test names describe the scenario or behavior tested
-
-### Step 7: Run Your Tests
-Compile your test binaries using your build system. Then execute:
-
-```bash
-./foo_test
-```
-
-GoogleTest will report passes and failures clearly on the console.
+Each test gets a fresh fixture instance, ensuring isolation.
 
 ---
 
-## 3. Organizing Tests for Growth
+## 4. Building and Running Tests
 
-### Project Layout Best Practices
-Organize tests close to the code they verify:
+### Build Integration
+
+Make sure your build system includes the necessary GoogleTest headers and links against `gtest` and `gtest_main` (or provides your own main).
+
+For example, in CMake:
+
+```cmake
+find_package(GTest REQUIRED)
+add_executable(my_test my_test.cc)
+target_link_libraries(my_test GTest::gtest_main)
+```
+
+### Running Tests
+
+Execute your test binary. GoogleTest will automatically discover and run all tests.
+
+Example console output:
 
 ```
-project_root/
-  src/
-    foo.cc
-    foo.h
-  tests/
-    foo_test.cc
-    bar_test.cc
+[ RUN      ] FactorialTest.HandlesZeroInput
+[       OK ] FactorialTest.HandlesZeroInput (0 ms)
+[ RUN      ] FactorialTest.HandlesPositiveInput
+[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
+[----------] 2 tests from FactorialTest (0 ms total)
+[==========] 2 tests from 1 test suite ran. (0 ms total)
+[  PASSED  ] 2 tests.
 ```
 
-This keeps related code and tests manageable.
+### What to Do When Tests Fail
 
-### Naming Conventions
-- Keep test suite and test names descriptive yet succinct.
-- Use PascalCase or camelCase for suite and test names; avoid underscores.
-- For fixtures, name classes clearly reflecting the test subject.
-
-### Group Test Suites
-Group related tests logically:
-- By component or module
-- By feature
-- By public API function
-
-This helps you browse and maintain your test coverage effectively.
+- Review the failure message and location
+- Check if your code or test expectations are correct
+- Use the provided file and line info to navigate directly in your editor
 
 ---
 
-## 4. Practical Examples
+## 5. Tips and Best Practices
 
-### Example 1: Simple Test Case
+- Keep tests focused on one behavior per test case
+- Use descriptive names for test suites and test cases
+- Favor `EXPECT_` over `ASSERT_` unless continuing after failure is unsafe
+- Use test fixtures to eliminate duplication
+- Write assertions that clearly communicate intent
+- Run tests frequently during development
+
+---
+
+## 6. Troubleshooting Common Issues
+
+<Tip>
+If your test executable does nothing or crashes immediately:
+- Check if you have linked against `gtest_main` or provided your own `main()`
+- Ensure `testing::InitGoogleTest(&argc, argv);` is called before `RUN_ALL_TESTS()`
+</Tip>
+
+<Note>
+If a test reports no tests found:
+- Verify you are compiling and linking test files
+- Ensure `TEST()` or `TEST_F()` macros are used properly
+</Note>
+
+<Warning>
+If you see linking errors about missing symbols from GoogleTest:
+- Confirm library paths and dependency order in your build system
+- Ensure GoogleTest was properly built
+</Warning>
+
+---
+
+## 7. Next Steps
+
+- Explore writing tests with [Test Fixtures and Suites](reference/testing.md#TestFixtures)
+- Learn about [Advanced Assertions and Matchers](guides/scenarios-patterns/advanced-assertions)
+- Discover how to [Create and Use Mocks](guides/getting-started-workflows/basic-mocking)
+- Review examples in [GoogleTest Samples](docs/samples.md) for practical scenarios
+
+---
+
+## Example: A Complete Minimal Test File
+
 ```cpp
 #include <gtest/gtest.h>
 
-int Add(int a, int b) { return a + b; }
+int Factorial(int n) {
+  return (n <= 1) ? 1 : n * Factorial(n - 1);
+}
 
-TEST(MathTest, BasicAdd) {
-  EXPECT_EQ(Add(1, 2), 3);
-  EXPECT_EQ(Add(-1, 1), 0);
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);
+}
+
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(8), 40320);
+}
+
+int main(int argc, char **argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
 }
 ```
 
-### Example 2: Test Fixture Usage
-```cpp
-class Calculator {
- public:
-  void Clear() { result_ = 0; }
-  void Add(int x) { result_ += x; }
-  int GetResult() const { return result_; }
- private:
-  int result_ = 0;
-};
-
-class CalculatorTest : public testing::Test {
- protected:
-  Calculator calc;
-};
-
-TEST_F(CalculatorTest, AddNumbers) {
-  calc.Clear();
-  calc.Add(5);
-  calc.Add(3);
-  EXPECT_EQ(calc.GetResult(), 8);
-}
-
-TEST_F(CalculatorTest, InitiallyZero) {
-  EXPECT_EQ(calc.GetResult(), 0);
-}
-```
-
-### Example 3: Running Tests and Output
-When tests run, output looks like:
-
-```
-[ RUN      ] CalculatorTest.AddNumbers
-[       OK ] CalculatorTest.AddNumbers (0 ms)
-[ RUN      ] CalculatorTest.InitiallyZero
-[       OK ] CalculatorTest.InitiallyZero (0 ms)
-[----------] 2 tests from CalculatorTest (1 ms total)
-```
-
-Failures will include file and line numbers and descriptive messages.
-
----
-
-## 5. Advanced Tips & Common Pitfalls
-
-### Tips
-- Use `ASSERT_*` macros when continuing without a condition makes no sense (e.g., null pointers).
-- Use `EXPECT_*` to allow multiple assertions in one test.
-- Write tests that verify **one thing** clearly for better maintainability.
-- Use fixtures to reduce duplication and facilitate setup/teardown.
-- Name your tests for intent — anyone reading the name should understand what is tested.
-
-### Common Pitfalls
-- Forgetting to include `testing::InitGoogleTest()` in `main()` before running tests.
-- Writing tests that depend on state from other tests — each test should be isolated.
-- Over-constraining expectations (especially in mocks) leading to brittle tests.
-- Ignoring the return value of `RUN_ALL_TESTS()` in `main()`.
-- Running tests without proper initialization of GoogleTest flags.
-
----
-
-## 6. Troubleshooting
-
-### Tests Do Not Run or Are Not Discovered
-- Ensure test files are compiled and linked correctly into the test binary.
-- Confirm you call `RUN_ALL_TESTS()` in your `main()` function.
-- Make sure tests are not disabled via `DISABLED_` prefix or command-line filters.
-
-### Assertion Failures
-- Read failure messages carefully; they provide argument values and locations.
-- Use `--gtest_filter` to isolate failing tests.
-- Use `EXPECT_*` judiciously for continued failure reporting.
-
-### Build or Link Errors
-- Check that GoogleTest is properly linked.
-- Inspect for incompatible C++ standards or missing dependencies.
-
-### Slow or Flaky Tests
-- Isolate slow tests and mark accordingly to run separately.
-- Avoid shared global state to prevent flaky behavior.
-
-### Further Help
-Refer to the official [GoogleTest Primer](primer.md) and [Mocking Cookbook](docs/gmock_cook_book.md) for deeper details.
-See the [Common Setup Issues](getting-started/setup-troubleshooting/common-setup-issues.mdx) guide for integration troubleshooting.
-
----
-
-## 7. Next Steps & Related Documents
-
-- [GoogleTest Primer](primer.md): Deepen your understanding of basics and core concepts.
-- [Writing Your First Test](getting-started/first-test-experience/writing-your-first-test.mdx): Hands-on guide to your initial test.
-- [Running and Understanding Test Output](getting-started/first-test-experience/running-and-understanding-tests.mdx): Learn how to interpret test results.
-- [Mocking Best Practices](guides/mocking-best-practices/basics-of-mocking.md): When and how to use mocks effectively.
-- [gMock Cookbook](docs/gmock_cook_book.md): Practical recipes for mocking.
-
----
-
-## Additional Resources
-- GoogleTest GitHub repository: https://github.com/google/googletest
-- GoogleTest official documentation hub for examples and API reference
-
----
-
-<Check>
-Remember: each test should be independent, clearly named, and focused on a single behavior.
-Use fixtures to share setup and teardown logic.
-Start with simple assertions, expand to fixtures as you grow.
-</Check>
+Run this file, and GoogleTest will execute your defined tests with output describing their results.
